<resources>
    <string name="app_name">ClickAwayApp</string>
    <string name="empty">Fill all the fields</string>
    <string name="success" translatable="false">Connected</string>
    <string name="hello_blank_fragment">Hello</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="products">Products</string>
    <string name="cart">Cart</string>
    <string name="language">Language</string>
    <string name="greek">Greek</string>
    <string name="english">English</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="apply_dark_theme">Apply dark theme</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="orders">Orders</string>
    <string name="stores">Stores</string>
    <string name="settings">Settings</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="deleteAllWarning">Are you sure you want to delete all products from your cart?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="emptyCart">Your cart is empty!</string>
    <string name="buy">Buy</string>
    <string name="gpsDisabled">GPS Disabled</string>
    <string name="openSettings">Open Settings</string>
    <string name="waitGPS">Please wait for GPS signal.</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="connected">Login success</string>
    <string name="addLocation">Please, add your address.</string>
    <string name="notInLocation">No store available in range of 50km. for your location.</string>
    <string name="notAllProducts">No store in range of 50km. with all products in your cart available for your location.</string>
    <string name="yourLocation">Your location</string>
    <string name="atLeastOne">You must enter at least one.</string>
    <string name="added">Added to cart.</string>
    <string name="add">Add</string>
    <string name="fullName">Full Name</string>
    <string name="cardNumber">Card Number</string>
    <string name="expirationDate">Expiration Date</string>
    <string name="cvv">CVV</string>
    <string name="selectStore">Please selecet a store to continue.</string>
    <string name="notAvailable">Not available</string>
    <string name="available">Available</string>
    <string name="sunday">Our stores are closed on Sundays.</string>
    <string name="noTime">No time available for this date.</string>
    <string name="pendingEmpty">You don\'t have pending orders.</string>
    <string name="expiredEmpty">You don\'t have expired orders.</string>
    <string name="completedEmpty">You don\'t have completed orders.</string>
    <string name="pending">Pending</string>
    <string name="expired">Expired</string>
    <string name="completed">Completed</string>
    <string name="loading">Loading</string>
    <string name="logged_in">Keep me logged in</string>
    <string name="continue_">Continue</string>
    <string name="emailBad">The email address is badly formatted.</string>
    <string name="wrongPassword">The password is invalid or the user does not have a password</string>
    <string name="wrongEmail">There is no user with this email.</string>
    <string name="emailInUse">The email address is already in use.</string>
    <string name="wrongPasswordForm">The password should be at least 6 characters.</string>
    <string name="enterEmail">Enter your email and you will receive the link for the password change.</string>
    <string name="send">Send</string>
    <string name="passwordReset">Password Reset</string>
    <string name="emailSent">Email sent.</string>
    <string name="emailEmpty">Fill the email field.</string>
    <string name="price">Price</string>
    <string name="forgotPassword">Forgot my password</string>
    <string name="createAccount">Create new account</string>
    <string name="understand">Sorry, we couldn\'t understand.</string>
    <string name="speak">Please speak now.</string>
    <string name="battery">"Battery: "</string>
    <string name="os">"OS: "</string>
    <string name="rom">"ROM: "</string>
    <string name="ram">"RAM: "</string>
    <string name="screen">"Screen size: "</string>
    <string name="cores">"Cores: "</string>
    <string name="front_camera">"Front camera: "</string>
    <string name="rear_camera">"Rear camera: "</string>
    <string name="gpu">"GPU: "</string>
    <string name="cpu">"CPU: "</string>
    <string name="shoppingCart">Shopping Cart</string>
    <string name="newEdit">"Enter new quantity for  "</string>
    <string name="deleteCart">"Are you sure you want to delete all "</string>
    <string name="questiionMark">" ?"</string>
    <string name="deleteAll">Delete All</string>
    <string name="editProduct">Edit Product</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="deleteProduct">Delete Product</string>
    <string name="availableStores">Available Stores</string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="done">Done</string>
    <string name="total_cost">Total Cost</string>
    <string name="wrongCC">Invalid credit card number.</string>
    <string name="wrongCCV">Invalid CVV format.</string>
    <string name="wrongDate">Invalid date format</string>
    <string name="start">Start</string>
    <string name="quit">Do you want to exit or sign out?</string>
    <string name="exit">Exit</string>
    <string name="signout">Sign Out</string>
    <string name="waiting">Waiting</string>
    <string name="rate">Rate your experience with this order</string>
    <string name="qrCode">Show this QR Code to the customer inside the store</string>
    <string name="orderExpired">Your order has expired</string>
    <string name="orderGetting">Your order is getting ready</string>
    <string name="ready">Your order is ready</string>
    <string name="suggestionReschedule">Your order getting ready, you arrived early, check if you can change the time of your appointment by rescheduling your order</string>
    <string name="orderLine">Your order getting ready, you can wait in line</string>
    <string name="storeClosedAfter">The store is closed right now, your order has expired.</string>
    <string name="storeOpening">The store is closed right now, wait for opening at 09:00.</string>
    <string name="suggestionFar">Your order is ready but you are far. Do you want to reschedule your order?</string>
    <string name="change">Reschedule</string>
    <string name="okay">Okay</string>
    <string name="reschComplete">Reschedule Completed</string>
    <string name="notificationReset">"Your order is now set for "</string>
    <string name="notification">Purchase Completed</string>
    <string name="orderStatus">Order\'s Status</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="humidityOff">The humidity sensor is not available</string>
    <string name="temperatureOff">The temperature sensor is not available</string>
    <string name="sensors">Sensors not available</string>
    <string name="lostInternet">Internet connection is lost. Please enable your internet connection to continue.</string>
    <string name="retry">Retry</string>
    <string name="ice">"Warning, ice with "</string>
    <string name="veryCold">"Very cold with "</string>
    <string name="cold">"Cold with "</string>
    <string name="cool">Cool with</string>
    <string name="hot">"Hot with "</string>
    <string name="veryHot">"Very hot with "</string>
    <string name="lowHumidity">low humidity.</string>
    <string name="highHumidity">high humidity.</string>
    <string name="rain">rain possibility.</string>
    <string name="notToday">Today is not the day of the order</string>
</resources>